# pasta-poly

./: CHANGELOG.md  README.md  hask-poly.cabal  pasta-poly.cabal  stack.yaml
app/: Main.hs
src/: Commit.hs  Fft.hs  HaskPoly.hs  PastaPoly.hs  Poly.hs
test/: Spec.hs  TestPoly.hs
